welcome.lessons.welcome.bat.bool1.Max1020.scala.error
max1020:5: error: ')' expected but 'if' found.
      if a<b{
      ^max1020:5: error: '(' expected but identifier found.
      if a<b{
         ^max1020:10: error: illegal start of simple expression
      } 
      ^